[tool.poetry]
name = "chevron2"
version = "0.1.0"
description = "A revised version of Chevron, for rendering mustache templates in Python"
authors = ["Eliot Robson <eliot.robson24@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "chevron2", from = "src"}
]
#TODO version classifiers may not be needed.
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
chevron = "^0.14.0"
pytest-datadir = "^1.5.0"
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"
isort = "^5.13.2"
black = "^24.2.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
required_plugins = [
  "pytest-datadir"
]

[tool.flake8]
# Black compatibility
max-line-length = 88
extend-ignore = ["E203", "W503"]

# Per <https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile>
[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = [
  "yaml"
]
ignore_missing_imports = true
