[project]
name = "mystace"
version = "0.1.1"
description = "Rendering mustache templates in Python fast."
authors = [{ name = "Eliot Robson", email = "eliot.robson24@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["more-itertools>=8", "typing-extensions>=4.15.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing :: Markup",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mystace"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-benchmark>=5.2.3",
  "pytest-cov>=7.0.0",
  "pytest-datadir>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = "tests"
required_plugins = ["pytest-benchmark", "pytest-datadir"]

[tool.coverage.run]
# Add in all library files.
include = ["src/mystace/*"]
# Omit init files
omit = ["*/__init__.py"]

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = ["yaml", "combustache.*", "pystache.*", "ustache.*"]
ignore_missing_imports = true
